fixed old javaism (Integer.valueOf)